# tiktorchic18.github.io

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile.old  README.md  _cms.ts  _config.ts  deno.jsonc  index.html
src/: index.md  main.c
src/_includes/layouts/: base.vto
src/_includes/partials/: header.vto
src/blog/: index.md
src/portfolio/: index.md
src/styles/: header.scss  main.css  main.scss
